--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,9 @@ click-repl==0.3.0
 colorama==0.4.6
 cron-descriptor==1.4.0
 Django==4.2.8
+django-appconf==1.0.6
 django-celery-beat==2.5.0
+django-celery-email==3.0.0
 django-celery-results==2.5.1
 django-ninja==1.1.0
 django-timezone-field==6.1.0
